tests/miz/pass/types/pass_type_elaboration_two_edge_local_mode_reserved_variable_inequality_001.miz
definition
  mode BaseTwoEdgeModeInequalityDef: BaseTwoEdgeModeInequality is set;
end;

definition
  mode MiddleTwoEdgeModeInequalityDef: MiddleTwoEdgeModeInequality is BaseTwoEdgeModeInequality;
end;

definition
  mode OuterTwoEdgeModeInequalityDef: OuterTwoEdgeModeInequality is MiddleTwoEdgeModeInequality;
end;

reserve z for OuterTwoEdgeModeInequality;
theorem TwoEdgeLocalModeReservedVariableInequalityPayloadBoundary: z <> z;
