tests/miz/fail/types/fail_type_elaboration_local_mode_structure_rhs_evidence_gap_001.miz
definition
  struct LocalStruct where
    field carrier -> set;
  end;
end;

definition
  mode StructModeDef: StructMode is LocalStruct;
end;

reserve z for StructMode;
